--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.SmartWeatherForcastApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.SmartWeatherForcastApp" parent="android:Theme.Material.Light.NoActionBar">
+        <!--Other app theme properties-->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+    </style>
+
 </resources>
