--- a/feature/weather/ui/src/main/res/values/colors.xml
+++ b/feature/weather/ui/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="wa_secondary">#5875df</color>
     <color name="wa_blackWhite">#FF000000</color>
     <color name="wa_whiteBlack">#FFFFFFFF</color>
+    <color name="wa_lightBlue">#AECDFF</color>
+
 </resources>
