Added DatabaseModule with room database support
Fixed minor ui bugs

--- a/feature/weather/ui/src/main/res/values-night/colors.xml
+++ b/feature/weather/ui/src/main/res/values-night/colors.xml
@@ -15,4 +15,5 @@
     <color name="wa_blackWhite">#FFFFFFFF</color>
     <color name="wa_whiteBlack">#232B30</color>
     <color name="wa_lightBlue">#90AECDFF</color>
+    <color name="wa_lightBlueVariant">#5896FD</color>
 </resources>
